--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">VK</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <integer name="com_vk_sdk_AppId">6202167</integer>
     <string name="title_music">Music</string>
     <string name="title_feed">Feed</string>
     <string name="title_messages">Messages</string>
+    <string name="request_execution_has_failed">Request execution has failed</string>
 </resources>
